crates/rattler_package_streaming/src/reqwest/snapshots/rattler_package_streaming__reqwest__fetch__tests__fetch_about_json.snap
---
source: crates/rattler_package_streaming/src/reqwest/fetch.rs
expression: about_json
---
channels:
  - "https://conda.anaconda.org/conda-forge/"
