crates/rattler_package_streaming/src/reqwest/snapshots/rattler_package_streaming__reqwest__fetch__tests__fetch_full_download_conda.snap
---
source: crates/rattler_package_streaming/src/reqwest/fetch.rs
expression: index_json
---
build: h4616a5c_0
build_number: 0
depends: []
name: clobber-fd-1
noarch: generic
subdir: noarch
timestamp: 1751876402910
version: 0.1.0
